log
Wed, Mar 19, 2025  8:38:23 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  8:47:02 AM: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:50:12: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
       dato = (int)k;
            ^
cc1.exe: all warnings being treated as errors
Compilation failed
9c476b7
Wed, Mar 19, 2025  8:48:35 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
400f243
Wed, Mar 19, 2025  8:59:51 AM: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
4f89da8
